# Kantar

./: Question1.ipynb  Question3.ipynb  Untitled4.ipynb  cluster.py  cluster2.py  pyproject.toml  step2.py
.ipynb_checkpoints/: Question3-checkpoint.ipynb
